fix bottom-bar covering other interactive elements
closes #6314

--- a/src/main/css/components/bottom-bar.css
+++ b/src/main/css/components/bottom-bar.css
@@ -1,8 +1,4 @@
 .bottom-bar {
-  /* TODO hm... not sure... */
-  /* bottom bar has to be above "everything" else */
-  z-index: 999999;
-
   /* position is set by javascript, as we need javascript to detect whether sticky or not. */
   /* as soon as firefox, safari supports "container-type: scroll-state" we can get rid of javascript. */
   /* (see git history for css...) */
